WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
182802
[WinCairo] Fix several build warnings under WebCore/platform
https://bugs.webkit.org/show_bug.cgi?id=182802
Summary
[WinCairo] Fix several build warnings under WebCore/platform
Basuke Suzuki
Reported
2018-02-14 11:42:36 PST
Warning C4101 'fileModificationDate': unreferenced local variable Source\WebCore\platform\network\curl\CurlCacheEntry.cpp:279 Warning C4239 nonstandard extension used: 'argument': conversion from 'WTF::String' to 'WTF::String &' Source\WebCore\platform\text\win\LocaleWin.cpp:75 Source\WebCore\platform\text\win\LocaleWin.cpp:77 Warning C4838 conversion from 'UINT' to 'CLIPFORMAT' requires a narrowing conversion Source\WebCore\platform\win\ClipboardUtilitiesWin.cpp:170 Source\WebCore\platform\win\ClipboardUtilitiesWin.cpp:325 Source\WebCore\platform\win\ClipboardUtilitiesWin.cpp:332 Source\WebCore\platform\win\ClipboardUtilitiesWin.cpp:351 Source\WebCore\platform\win\ClipboardUtilitiesWin.cpp:358 Source\WebCore\platform\win\ClipboardUtilitiesWin.cpp:366 Source\WebCore\platform\win\ClipboardUtilitiesWin.cpp:373 Source\WebCore\platform\win\ClipboardUtilitiesWin.cpp:380 Source\WebCore\platform\win\ClipboardUtilitiesWin.cpp:387
Attachments
FIX
(13.65 KB, patch)
2018-02-14 12:27 PST
,
Basuke Suzuki
no flags
Details
Formatted Diff
Diff
Fix encoding
(6.85 KB, patch)
2018-02-14 13:18 PST
,
Basuke Suzuki
no flags
Details
Formatted Diff
Diff
remove tab
(6.85 KB, patch)
2018-02-14 14:10 PST
,
Basuke Suzuki
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Basuke Suzuki
Comment 1
2018-02-14 12:27:13 PST
Created
attachment 333829
[details]
FIX
Basuke Suzuki
Comment 2
2018-02-14 13:18:05 PST
Created
attachment 333833
[details]
Fix encoding
EWS Watchlist
Comment 3
2018-02-14 13:20:38 PST
Attachment 333833
[details]
did not pass style-queue: ERROR: Source/WebCore/ChangeLog:8: Line contains tab character. [whitespace/tab] [5] ERROR: Source/WebCore/ChangeLog:11: Line contains tab character. [whitespace/tab] [5] ERROR: Source/WebCore/ChangeLog:16: Line contains tab character. [whitespace/tab] [5] Total errors found: 3 in 3 files If any of these errors are false positives, please file a bug against check-webkit-style.
Basuke Suzuki
Comment 4
2018-02-14 14:10:16 PST
Created
attachment 333840
[details]
remove tab
WebKit Commit Bot
Comment 5
2018-02-14 16:14:01 PST
Comment on
attachment 333840
[details]
remove tab Clearing flags on attachment: 333840 Committed
r228494
: <
https://trac.webkit.org/changeset/228494
>
WebKit Commit Bot
Comment 6
2018-02-14 16:14:02 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 7
2018-02-14 16:15:35 PST
<
rdar://problem/37552273
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug